grammars/CouncilOfState.g4
grammar CouncilOfState;

akomaNtoso : judgment EOF;

text : (NUM | ALL_CHARS | SPECIAL_CHARS | SPACE | DOT | COMMA | SLASH | ARITHMOS_TEXT | BECAUSE_ALT | ANO_KATO);

judgment : header judgmentBody conclusions;

//------------------------ Header ---------------------------------------//
header : caseNmuber+ docProponent? headerPar+;
caseNmuber : NEXT_LINE* ARITHMOS_TEXT SPACE docNumber (SPACE NEXT_LINE*)? NEXT_LINE;
docProponent:  NEXT_LINE* COURT SPACE? NEXT_LINE*;
headerPar : (text+) NEXT_LINE (SPACE* NEXT_LINE+)?;
docNumber : NUM SLASH NUM;

//--------------------- judgmentBody -----------------------------------//
judgmentBody : introduction? motivation decision ;

introduction : (introductionIntro intro_Par*)+;
introductionIntro: (APPLICATION_TEXT) (text+) NEXT_LINE*;
intro_Par : (text+) (.*?) NEXT_LINE+;

motivation : motivPar+ blockList;
motivPar : (MOTIVATION_PAR | THINK_BY_LAW ) DOT? NEXT_LINE+ (SPACE* NEXT_LINE+)? | MOTIVATION_PAR SPACE THINK_BY_LAW DOT? NEXT_LINE;
blockList : ste_item+;

// 1. Επειδή ή Επειδή (χωρίς αριθμό)
ste_item:
    num SPACE? itemPar |
    NEXT_LINE itemPar;
num : NUM SPACE? DOT;

itemPar : (BECAUSE | BECAUSE_ALT) COMMA? (.*?) NEXT_LINE*;

decision : decisionIntro outcomePar? decisionPar+ ;
decisionIntro: (DECISION_INTRO DOT?) SPACE* NEXT_LINE* ;
outcomePar : outcome (.*?) NEXT_LINE+ (SPACE* NEXT_LINE+)? ;
decisionPar : (.*?) NEXT_LINE+ (SPACE* NEXT_LINE+)? | (.*?) DOT;
outcome : OUTCOME;

//------------------------ Conclusion -------------------------------------//
conclusions : conclusionIntro concPar+ ;
conclusionIntro : DIASKEPSI text+ NEXT_LINE+;
concPar : (text+) (.*?) NEXT_LINE*;

//----------------------LEXER -- TOKENS-----------------------------------//
NEXT_LINE : '\n' |'\r';

NUM : [0-9]+ ;
DOT : '.';
COMMA : ',';
SLASH : '/';
ARITHMOS_TEXT : 'Αριθμός' | 'ΑΡΙΘΜΟΣ' | 'Aριθμός' | 'Αριθμό';
APPLICATION_TEXT :
    'Με' SPACE 'την' SPACE 'αίτηση' SPACE 'αυτή' |
    'Η' SPACE 'εκδίκαση' SPACE 'άρχισε'
    ;

MOTIVATION_PAR :
    'Α' SPACE? 'φ' SPACE? 'ο' SPACE? 'ύ' SPACE?
    'μ' SPACE? 'ε' SPACE? 'λ' SPACE? 'έ' SPACE? 'τ' SPACE? 'η' SPACE? 'σ' SPACE? 'ε' SPACE?
    'τ' SPACE? 'α' SPACE? 'σ' SPACE? 'χ' SPACE? 'ε' SPACE? 'τ' SPACE? 'ι' SPACE? 'κ' SPACE? 'ά' SPACE? DOT? NEXT_LINE?
    'έ' SPACE? 'γ' SPACE? 'γ' SPACE? 'ρ' SPACE? 'α' SPACE? 'φ' SPACE? 'α' |
    'Ι δ ό ν τ α τ α σ χ ε τ ι κ ά έ γ γ ρ α φ α'   |
    'Ι δ ό ν τ α σ χ ε τ ι κ ά έ γ γ ρ α φ α' |
    'Ι δ ό ν σ χ ε τ ι κ ά έ γ γ ρ α φ α' |
    'Ιδόν τα σχετικά έγγραφα και' |
    'Ε ί δ ε τ α σ χ ε τ ι κ ά έ γ γ ρ α φ α κ α ι' |
    'Α φ ο ύ μ ε λ έ τ η σ ε τ α σ x ε τ ι κ ά έ γ γ ρ α φ α' |
    'Α φ ο ύ μ ε λ έ τ η σ ε τ α σ χ ε τ ι κ ά έ γ γ ρ α φ α' |
    'Α φ ο υ μ ε λ ε τ η σ ε τ α σ x ε τ ι κ ά\nέ γ γ ρ α φ α' |
    'Α φ ο ύ μ ε λ έ τ η σε τ α σ χ ε τ ι κ ά έ γ γ ρ α φ α'
    ;

THINK_BY_LAW :
    'Σ' SPACE? 'κ' SPACE? 'έ' SPACE? 'φ' SPACE? 'θ' SPACE? 'η' SPACE? 'κ' SPACE? 'ε' SPACE?
    'κ' SPACE? 'α' SPACE? 'τ' SPACE? 'ά' SPACE?
    'τ' SPACE? 'ο' SPACE? ('ν' SPACE?)? 'Ν' SPACE? 'ό' SPACE? 'μ' SPACE? 'ο' SPACE? |
    ('ΣΚΕΦΘΗΚΕ' | 'ΣΚΕΦΤΗΚΕ') SPACE? 'ΣΥΜΦΩΝΑ' SPACE? 'ΜΕ' SPACE? ('ΤΟ' |'ΤΟΝ') SPACE? 'ΝΟΜΟ' |
    'Σ κ έ φ τ η κ ε κ α τ ά τ ο Ν ό μ ο' |
    'Σκέφθηκε κατα το Νόμο' |
    'Σκέφτηκε κατά το Νόμο' |
    'Σκέφθηκε κατά το νόμο' |
    'Σκέφθηκε κατά τον νόμο' |
    'Σκέφθηκε κατά νόμο' |
    'Σκέφθηκε κ α τ ά το νόμο' |
    'Σκέφθηκε κ α τ ά τ ο ν ν ό μ ο' |
    'Σ κ έ φ θ η κ ε κ α τ ά τ ο ν ό μ ο' |
    'Σ κ έ φ θ η κ ε κ α τ ά τ o ν ό μ ο' |
    'Σ κ έ φ θ η κ ε κ α τ ά τ ο Ν ό μ ο' |
    'Σ κ έ φ θ η κ ε κ α τ ά τ ο Ν ό μ o' |
    'Σ κ έ φ θ η κ ε κ α τ ά τ o Ν ό μ ο' |
    'Σ κ έ φ θ η κ ε κ α τ α τ ο ν ό μ ο'|
    'Σ κ έ φ θ η κ ε κ α τ ά τ ο ν ν ό μ ο' |
    'Σ κ έ φ θη κ ε κ α τ ά τ ο ν ό μ ο' |
    'Σ κ ε φ θ έ ν κ α τ ά τ ο ν Ν ό μ ο ν' |
    'Σ κ εφ θ έ ν κ α τ ά τ ο ν Ν ό μ ο ν' |
    'Σ κ ε φ θ έ ν κ α τ ά τ ο Ν ό μ ο' |
    'Σ κ ε φ θ ε ν κ α τ ά τ ο Ν ό μ ο' |
    'Σ κ ε φ θ έ ν κ α τ ά τ ο Ν ό μ ο ν' |
    'Σ κ ε φ θ έ ν κ α τ ά τ ον Ν ό μ ον' |
    'Σ κ ε φ θ έν κ α τ ά τ ο ν Ν ό μ ο ν' |
    'Σ κ ε φ θ έν κ α τ ά τ ο Ν ό μ ο ν' |
    'Σκεφθέν κατά τόν Νόμον' SPACE? COMMA? |
    'Σκεφθέν κατά τον Νόμον' SPACE? COMMA? |
    'Σκεφθέν' SPACE? 'κατά τον νόμο' |
    'ε σ κ έ φ θ η κ α τ ά τ ο ν ν ό μ ο' |
    'ε σ κ έ φ θ η κ α τ ά τ ο ν ό μ ο' |
    'ε σ κ έ φ θ η κ α τ ά τ ο ν Ν ό μ ο' |
    'Σ κ ε φ θ έ ν κ α τ ά τ ο ν ν ό μ ο'
    ;

BECAUSE: ('Επειδή' | 'Eπειδή');
BECAUSE_ALT : 'επειδή' ;

DECISION_INTRO :
    'Δ' SPACE? 'ι' SPACE? ('ά' | 'α') SPACE? 'τ' SPACE? 'α' SPACE? 'ύ' SPACE? 'τ' SPACE? 'α' |
    'ΔΙΑ' SPACE? 'ΤΑΥΤΑ' |
    'ΔΙΑ ΤΑΥΤΑ'|
    'Δια Ταύτα' |
    'Δ ι α τ α υ τ α' |
    'Δ' SPACE? 'Ι' SPACE? 'Α' SPACE? 'Τ' SPACE? 'Α' SPACE? 'Υ' SPACE? 'Τ' SPACE 'Α' |
    'Για τους λόγους αυτούς' |
    'Γ ι α τ ο υ ς λ ό γ ο υ ς α υ τ ο ύ ς' |
    'Για το λόγο αυτό' |
    'Για τον λόγο αυτόν' |
    'Για το λόγο αυτόν' |
    'Μ' SPACE?'ε τις σκέψεις αυτές' |
    'Μ ε τ ι ς σ κ έ ψ ε ι ς α υ τ έ ς'
    ;

COURT :
    ('ΤΟ'| 'TO' | 'ΤO' | 'TΟ') SPACE? ('ΣΥΜΒΟΥΛΙΟ' | 'ΣΥΜΒΟΥΛΙΟΝ' | 'ΣΥΜΒΥΛΙΟ' | 'ΣΥΜΒΟΥΛΙΟN') SPACE? 'ΤΗΣ' SPACE? 'ΕΠΙΚΡΑΤΕΙΑΣ' |
    'Η Επιτροπή Αναστολών του Συμβουλίου της Επικρατείας';

OUTCOME :
    'Απορρίπτει' |
    'Δέχεται' (SPACE 'εν' SPACE 'μέρει')? |
    'Αναβάλλει' |
    'Παραπέμπει' |
    'Ακυρώνει' |
    'Αναιρεί' |
    'Καταδικάζει' |
    'Συνεκδικάζει';

DIASKEPSI :
    'Η' SPACE ('διάσκεψη' | 'διάσκεψις') SPACE 'έγινε' |
    'Κρίθηκε' SPACE? ('και' | COMMA) SPACE ('αποφασίσθηκε' | 'αποφασίστηκε') |
    'Κρίθηκε αποφασίσθηκε'|
    'Εκρίθη και απεφασίσθη' |
    'Η διάσκεψη έγινε';

ALL_CHARS :
    ('Α' | 'Ά' | 'α' | 'ά' | 'Β' | 'β' | 'γ' | 'Γ' | 'δ' |'Δ' |
    'ε' | 'Ε' | 'έ' | 'Έ' | 'Ζ' | 'ζ' | 'Η' | 'Ή' | 'η' | 'ή' | 'θ' | 'Θ' |
    'ι' | 'Ι' | 'Ϊ' | 'Ί' | 'ί' | 'ϊ' | 'ΐ'| 'κ' | 'Κ' | 'Λ' | 'λ' | 'Μ' | 'μ' | 'µ'|
    'Ν' | 'ν' | 'Ξ' | 'ξ' | 'ο' | 'Ο' | 'ό' | 'Ό' | 'Π' | 'π' |
    'Ρ' | 'ρ' | 'Σ' | 'σ' | 'ς' | 'τ' | 'Τ' | 'υ' | 'Υ' | 'ύ' | 'Ϋ'| 'ϋ' | 'Ύ' |
    'Φ' | 'φ' | 'Χ' | 'χ' | 'ώ' | 'ω' | 'Ω' | 'Ώ' | 'ψ' | 'Ψ' | [A-Za-z] | 'ö' | '×'|
    'í')+
    ;

SPECIAL_CHARS: (
    '"' | '¼' | '½' |
    '»' | '«' | '¶' |
    '·' | '•' | '·'| '―'|
    '…' | '$' | '‰' |
    '%' | '{' | '}' |
    '!' | '¨' | '²' |
    '(' | ')' | ']' | '[' |
    '+' | '-' | '–' | '¬' |
    '−' | '?' | '¦' | '­' |
    '€' | '*' | '@' | '¾' |
    ';' | '“' | '”' | '£' |
    '=' | '<' | '~' | '^' |
    '_' | //['] |
    [’΄'`´ʽ‘ʼ] | [|] |
    '\\' | '/' | '°'|
    '&' | '>' | '§' | '#')
    ;

ANO_KATO: ':';

SPACE : [\t ]+ | ' ';
