grammars/gen/CouncilOfStateParser.py
# Generated from /home/plessas/EDBM34/grammars/CouncilOfState.g4 by ANTLR 4.7.2
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys




class CouncilOfStateParser ( Parser ):

    grammarFileName = "CouncilOfState.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"'.'", u"<INVALID>", 
                     u"'/'", u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"'\u03B5\u03C0\u03B5\u03B9\u03B4\u03AE'", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"':'" ]

    symbolicNames = [ u"<INVALID>", u"NEXT_LINE", u"NUM", u"DOT", u"COMMA", 
                      u"SLASH", u"ARITHMOS_TEXT", u"APPLICATION_TEXT", u"MOTIVATION_PAR", 
                      u"THINK_BY_LAW", u"BECAUSE", u"BECAUSE_ALT", u"DECISION_INTRO", 
                      u"COURT", u"OUTCOME", u"DIASKEPSI", u"ALL_CHARS", 
                      u"SPECIAL_CHARS", u"ANO_KATO", u"SPACE" ]

    RULE_akomaNtoso = 0
    RULE_text = 1
    RULE_judgment = 2
    RULE_header = 3
    RULE_caseNmuber = 4
    RULE_docProponent = 5
    RULE_headerPar = 6
    RULE_docNumber = 7
    RULE_judgmentBody = 8
    RULE_introduction = 9
    RULE_introductionIntro = 10
    RULE_intro_Par = 11
    RULE_motivation = 12
    RULE_motivPar = 13
    RULE_blockList = 14
    RULE_ste_item = 15
    RULE_num = 16
    RULE_itemPar = 17
    RULE_decision = 18
    RULE_decisionIntro = 19
    RULE_outcomePar = 20
    RULE_decisionPar = 21
    RULE_outcome = 22
    RULE_conclusions = 23
    RULE_conclusionIntro = 24
    RULE_concPar = 25

    ruleNames =  [ u"akomaNtoso", u"text", u"judgment", u"header", u"caseNmuber", 
                   u"docProponent", u"headerPar", u"docNumber", u"judgmentBody", 
                   u"introduction", u"introductionIntro", u"intro_Par", 
                   u"motivation", u"motivPar", u"blockList", u"ste_item", 
                   u"num", u"itemPar", u"decision", u"decisionIntro", u"outcomePar", 
                   u"decisionPar", u"outcome", u"conclusions", u"conclusionIntro", 
                   u"concPar" ]

    EOF = Token.EOF
    NEXT_LINE=1
    NUM=2
    DOT=3
    COMMA=4
    SLASH=5
    ARITHMOS_TEXT=6
    APPLICATION_TEXT=7
    MOTIVATION_PAR=8
    THINK_BY_LAW=9
    BECAUSE=10
    BECAUSE_ALT=11
    DECISION_INTRO=12
    COURT=13
    OUTCOME=14
    DIASKEPSI=15
    ALL_CHARS=16
    SPECIAL_CHARS=17
    ANO_KATO=18
    SPACE=19

    def __init__(self, input, output=sys.stdout):
        super(CouncilOfStateParser, self).__init__(input, output=output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AkomaNtosoContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CouncilOfStateParser.AkomaNtosoContext, self).__init__(parent, invokingState)
            self.parser = parser

        def judgment(self):
            return self.getTypedRuleContext(CouncilOfStateParser.JudgmentContext,0)


        def EOF(self):
            return self.getToken(CouncilOfStateParser.EOF, 0)

        def getRuleIndex(self):
            return CouncilOfStateParser.RULE_akomaNtoso

        def enterRule(self, listener):
            if hasattr(listener, "enterAkomaNtoso"):
                listener.enterAkomaNtoso(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAkomaNtoso"):
                listener.exitAkomaNtoso(self)




    def akomaNtoso(self):

        localctx = CouncilOfStateParser.AkomaNtosoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_akomaNtoso)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.judgment()
            self.state = 53
            self.match(CouncilOfStateParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CouncilOfStateParser.TextContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(CouncilOfStateParser.NUM, 0)

        def ALL_CHARS(self):
            return self.getToken(CouncilOfStateParser.ALL_CHARS, 0)

        def SPECIAL_CHARS(self):
            return self.getToken(CouncilOfStateParser.SPECIAL_CHARS, 0)

        def SPACE(self):
            return self.getToken(CouncilOfStateParser.SPACE, 0)

        def DOT(self):
            return self.getToken(CouncilOfStateParser.DOT, 0)

        def COMMA(self):
            return self.getToken(CouncilOfStateParser.COMMA, 0)

        def SLASH(self):
            return self.getToken(CouncilOfStateParser.SLASH, 0)

        def ARITHMOS_TEXT(self):
            return self.getToken(CouncilOfStateParser.ARITHMOS_TEXT, 0)

        def BECAUSE_ALT(self):
            return self.getToken(CouncilOfStateParser.BECAUSE_ALT, 0)

        def ANO_KATO(self):
            return self.getToken(CouncilOfStateParser.ANO_KATO, 0)

        def getRuleIndex(self):
            return CouncilOfStateParser.RULE_text

        def enterRule(self, listener):
            if hasattr(listener, "enterText"):
                listener.enterText(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitText"):
                listener.exitText(self)




    def text(self):

        localctx = CouncilOfStateParser.TextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_text)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CouncilOfStateParser.NUM) | (1 << CouncilOfStateParser.DOT) | (1 << CouncilOfStateParser.COMMA) | (1 << CouncilOfStateParser.SLASH) | (1 << CouncilOfStateParser.ARITHMOS_TEXT) | (1 << CouncilOfStateParser.BECAUSE_ALT) | (1 << CouncilOfStateParser.ALL_CHARS) | (1 << CouncilOfStateParser.SPECIAL_CHARS) | (1 << CouncilOfStateParser.ANO_KATO) | (1 << CouncilOfStateParser.SPACE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JudgmentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CouncilOfStateParser.JudgmentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(CouncilOfStateParser.HeaderContext,0)


        def judgmentBody(self):
            return self.getTypedRuleContext(CouncilOfStateParser.JudgmentBodyContext,0)


        def conclusions(self):
            return self.getTypedRuleContext(CouncilOfStateParser.ConclusionsContext,0)


        def getRuleIndex(self):
            return CouncilOfStateParser.RULE_judgment

        def enterRule(self, listener):
            if hasattr(listener, "enterJudgment"):
                listener.enterJudgment(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitJudgment"):
                listener.exitJudgment(self)




    def judgment(self):

        localctx = CouncilOfStateParser.JudgmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_judgment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.header()
            self.state = 58
            self.judgmentBody()
            self.state = 59
            self.conclusions()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CouncilOfStateParser.HeaderContext, self).__init__(parent, invokingState)
            self.parser = parser

        def caseNmuber(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CouncilOfStateParser.CaseNmuberContext)
            else:
                return self.getTypedRuleContext(CouncilOfStateParser.CaseNmuberContext,i)


        def docProponent(self):
            return self.getTypedRuleContext(CouncilOfStateParser.DocProponentContext,0)


        def headerPar(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CouncilOfStateParser.HeaderParContext)
            else:
                return self.getTypedRuleContext(CouncilOfStateParser.HeaderParContext,i)


        def getRuleIndex(self):
            return CouncilOfStateParser.RULE_header

        def enterRule(self, listener):
            if hasattr(listener, "enterHeader"):
                listener.enterHeader(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitHeader"):
                listener.exitHeader(self)




    def header(self):

        localctx = CouncilOfStateParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 61
                    self.caseNmuber()

                else:
                    raise NoViableAltException(self)
                self.state = 64 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CouncilOfStateParser.NEXT_LINE or _la==CouncilOfStateParser.COURT:
                self.state = 66
                self.docProponent()


            self.state = 70 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 69
                self.headerPar()
                self.state = 72 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CouncilOfStateParser.NUM) | (1 << CouncilOfStateParser.DOT) | (1 << CouncilOfStateParser.COMMA) | (1 << CouncilOfStateParser.SLASH) | (1 << CouncilOfStateParser.ARITHMOS_TEXT) | (1 << CouncilOfStateParser.BECAUSE_ALT) | (1 << CouncilOfStateParser.ALL_CHARS) | (1 << CouncilOfStateParser.SPECIAL_CHARS) | (1 << CouncilOfStateParser.ANO_KATO) | (1 << CouncilOfStateParser.SPACE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CaseNmuberContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CouncilOfStateParser.CaseNmuberContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ARITHMOS_TEXT(self):
            return self.getToken(CouncilOfStateParser.ARITHMOS_TEXT, 0)

        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(CouncilOfStateParser.SPACE)
            else:
                return self.getToken(CouncilOfStateParser.SPACE, i)

        def docNumber(self):
            return self.getTypedRuleContext(CouncilOfStateParser.DocNumberContext,0)


        def NEXT_LINE(self, i=None):
            if i is None:
                return self.getTokens(CouncilOfStateParser.NEXT_LINE)
            else:
                return self.getToken(CouncilOfStateParser.NEXT_LINE, i)

        def getRuleIndex(self):
            return CouncilOfStateParser.RULE_caseNmuber

        def enterRule(self, listener):
            if hasattr(listener, "enterCaseNmuber"):
                listener.enterCaseNmuber(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCaseNmuber"):
                listener.exitCaseNmuber(self)




    def caseNmuber(self):

        localctx = CouncilOfStateParser.CaseNmuberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_caseNmuber)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CouncilOfStateParser.NEXT_LINE:
                self.state = 74
                self.match(CouncilOfStateParser.NEXT_LINE)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(CouncilOfStateParser.ARITHMOS_TEXT)
            self.state = 81
            self.match(CouncilOfStateParser.SPACE)
            self.state = 82
            self.docNumber()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CouncilOfStateParser.SPACE:
                self.state = 83
                self.match(CouncilOfStateParser.SPACE)
                self.state = 87
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 84
                        self.match(CouncilOfStateParser.NEXT_LINE) 
                    self.state = 89
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)



            self.state = 92
            self.match(CouncilOfStateParser.NEXT_LINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DocProponentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CouncilOfStateParser.DocProponentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def COURT(self):
            return self.getToken(CouncilOfStateParser.COURT, 0)

        def NEXT_LINE(self, i=None):
            if i is None:
                return self.getTokens(CouncilOfStateParser.NEXT_LINE)
            else:
                return self.getToken(CouncilOfStateParser.NEXT_LINE, i)

        def SPACE(self):
            return self.getToken(CouncilOfStateParser.SPACE, 0)

        def getRuleIndex(self):
            return CouncilOfStateParser.RULE_docProponent

        def enterRule(self, listener):
            if hasattr(listener, "enterDocProponent"):
                listener.enterDocProponent(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDocProponent"):
                listener.exitDocProponent(self)




    def docProponent(self):

        localctx = CouncilOfStateParser.DocProponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_docProponent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CouncilOfStateParser.NEXT_LINE:
                self.state = 94
                self.match(CouncilOfStateParser.NEXT_LINE)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(CouncilOfStateParser.COURT)
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 101
                self.match(CouncilOfStateParser.SPACE)


            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CouncilOfStateParser.NEXT_LINE:
                self.state = 104
                self.match(CouncilOfStateParser.NEXT_LINE)
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderParContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CouncilOfStateParser.HeaderParContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NEXT_LINE(self, i=None):
            if i is None:
                return self.getTokens(CouncilOfStateParser.NEXT_LINE)
            else:
                return self.getToken(CouncilOfStateParser.NEXT_LINE, i)

        def text(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CouncilOfStateParser.TextContext)
            else:
                return self.getTypedRuleContext(CouncilOfStateParser.TextContext,i)


        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(CouncilOfStateParser.SPACE)
            else:
                return self.getToken(CouncilOfStateParser.SPACE, i)

        def getRuleIndex(self):
            return CouncilOfStateParser.RULE_headerPar

        def enterRule(self, listener):
            if hasattr(listener, "enterHeaderPar"):
                listener.enterHeaderPar(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitHeaderPar"):
                listener.exitHeaderPar(self)




    def headerPar(self):

        localctx = CouncilOfStateParser.HeaderParContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_headerPar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 110
                self.text()
                self.state = 113 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CouncilOfStateParser.NUM) | (1 << CouncilOfStateParser.DOT) | (1 << CouncilOfStateParser.COMMA) | (1 << CouncilOfStateParser.SLASH) | (1 << CouncilOfStateParser.ARITHMOS_TEXT) | (1 << CouncilOfStateParser.BECAUSE_ALT) | (1 << CouncilOfStateParser.ALL_CHARS) | (1 << CouncilOfStateParser.SPECIAL_CHARS) | (1 << CouncilOfStateParser.ANO_KATO) | (1 << CouncilOfStateParser.SPACE))) != 0)):
                    break

            self.state = 115
            self.match(CouncilOfStateParser.NEXT_LINE)
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CouncilOfStateParser.SPACE:
                    self.state = 116
                    self.match(CouncilOfStateParser.SPACE)
                    self.state = 121
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 123 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 122
                    self.match(CouncilOfStateParser.NEXT_LINE)
                    self.state = 125 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==CouncilOfStateParser.NEXT_LINE):
                        break



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DocNumberContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CouncilOfStateParser.DocNumberContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i=None):
            if i is None:
                return self.getTokens(CouncilOfStateParser.NUM)
            else:
                return self.getToken(CouncilOfStateParser.NUM, i)

        def SLASH(self):
            return self.getToken(CouncilOfStateParser.SLASH, 0)

        def getRuleIndex(self):
            return CouncilOfStateParser.RULE_docNumber

        def enterRule(self, listener):
            if hasattr(listener, "enterDocNumber"):
                listener.enterDocNumber(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDocNumber"):
                listener.exitDocNumber(self)




    def docNumber(self):

        localctx = CouncilOfStateParser.DocNumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_docNumber)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(CouncilOfStateParser.NUM)
            self.state = 130
            self.match(CouncilOfStateParser.SLASH)
            self.state = 131
            self.match(CouncilOfStateParser.NUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JudgmentBodyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CouncilOfStateParser.JudgmentBodyContext, self).__init__(parent, invokingState)
            self.parser = parser

        def motivation(self):
            return self.getTypedRuleContext(CouncilOfStateParser.MotivationContext,0)


        def decision(self):
            return self.getTypedRuleContext(CouncilOfStateParser.DecisionContext,0)

